name:                slp-data
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jd95/slp-data#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff
maintainer:          jeffreydwyer95@outlook.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable slp-data
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , optparse-applicative
                     , microlens-platform
                     , cassava
                     , directory
                     , vector
		     